1. Метод .of [#70623 #173988]